--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,7 @@
         android:id="@+id/textView"
         android:layout_width="300dp"
         android:layout_height="400dp"
-        android:text="Results"
+        android:text="@string/results"
         android:layout_marginStart="30dp"
         android:layout_marginEnd="30dp"
         app:layout_constraintTop_toTopOf="parent"
